Remove unnecessary usages of IOUtils